--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -12,10 +12,14 @@
             <div class="col-md-6 mt-5">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Login</h4>
+                        <h4>Register</h4>
                     </div>
                     <div class="card-body">
-                        <form id="loginForm">
+                        <form id="registerForm">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" class="form-control" required>
+                            </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" id="email" class="form-control" required>
@@ -24,20 +28,18 @@
                                 <label for="password">Password</label>
                                 <input type="password" id="password" class="form-control" required>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block">Register</button>
                         </form>
-                        <div class="text-center mt-3">
-                            <a href="register.html">Register as new user</a>
-                        </div>
-                        <div class="text-center mt-2">
-                            <a href="forgot-password.html">Forgot password?</a>
-                        </div>
+                        <div id="successMessage" class="alert alert-success mt-3" style="display: none;"></div>
                         <div id="errorMessage" class="alert alert-danger mt-3" style="display: none;"></div>
+                        <div class="text-center mt-3">
+                            <a href="index.html">Back to Login</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="login.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
